--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<title>salvar</title>
-<h1>salvar</h1>
+<title>Salvar</title>
+<h1>Salvar</h1>
 <form action="salvar.php">
     Sensor1: <input type="text" name="s1"/>
     <br />
@@ -8,4 +8,10 @@
     Sensor3: <input type="text" name="s3"/>
     <br/>
     <input type="submit" value="Salvar">
+    <br />
+    <br />
+	<a href="delete.php">Deletar Sensores </a>
+	<br />
+	<br />
+	<a href="update.php">Alterar Sensores </a>
 </form>
